# Basitune

./: .env.example  .gitignore  AUDIO_DROPOUT_INVESTIGATION.md  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  DOCS_INDEX.md  LICENSE  PROJECT_OVERVIEW.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  README.md.sig  RELEASING.md  SETUP_CHECKLIST.md  WELCOME.md  basitune.desktop  basitune.metainfo.xml  build-flatpak.sh  com.basiphobe.basitune.yml  index.html  logs.txt  package-lock.json  package.json  playback-controls.js  setup.fish  setup.sh  sidebar.js  todo.txt  visualizer.js  volume-fix.js  volume-normalizer.js
.github/: copilot-instructions.md
.github/workflows/: README.md  build.yml  release.yml
scripts/: set-build-version.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: ICON_GUIDE.md  README.md  icon.icns
src-tauri/src/: cache.rs  config.rs  discord.rs  lib.rs  main.rs  main.rs.backup  notifications.rs  playback.rs  sidebar.rs  tray.rs  updater.rs  utils.rs
src-tauri/src/ai/: genius.rs  mod.rs  openai.rs
src/scripts/: audio-diagnostics.js  playback-controls.js  sidebar.js  visualizer.js  volume-fix.js
test_idle_detection/: Cargo.toml
test_idle_detection/src/: main.rs
