[package]
name = "basitune"
version = "1.0.14"
description = "A lightweight desktop wrapper for YouTube Music"
authors = ["Basitune Contributors"]
edition = "2021"

[lib]
name = "basitune_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["devtools"] }
tauri-plugin-shell = "2.0"
tauri-plugin-updater = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tauri-plugin-single-instance = "2.3.6"
scraper = "0.24.0"
urlencoding = "2.1.3"
discord-rich-presence = "0.2"
regex = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = false

# Development profile with better performance
# Reduces audio crackling and UI lag while still allowing debugging
[profile.dev]
opt-level = 2        # Optimize for speed (fixes audio issues)
debug = true         # Keep debug symbols
incremental = true   # Faster recompiles

# Faster release build (use with: cargo build --profile release-fast)
# Much faster compile times, slightly larger binary
[profile.release-fast]
inherits = "release"
lto = false          # No LTO - this is what makes it slow
codegen-units = 16   # Parallel compilation
opt-level = 2        # Standard optimization (vs "s" for size)
strip = false        # Don't strip symbols for faster linking
